实现数据库的增删改查操作

--- a/atm/CMakeLists.txt
+++ b/atm/CMakeLists.txt
@@ -4,4 +4,6 @@ project(atm)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(atm src/atm.cpp
-        include/atm.h)
+        include/atm.h
+        include/storage.h
+        src/storage.cpp)
